--- a/css/custom.css
+++ b/css/custom.css
@@ -65,7 +65,7 @@ a.accordion-toggle-top:hover{
 	color: #000000;
 	
 }
-.accordion-group-top{background-color:  #ffffff;}
+.accordion-group-top{background-color:  #000000;}
 
 .accordion-inner ul {color:#ffffff;}
 
