--- a/css/custom.css
+++ b/css/custom.css
@@ -67,7 +67,7 @@ a.accordion-toggle-top:hover{
 }
 .accordion-group-top{background-color:  #000000;}
 
-.accordion-inner ul {color:#ffffff;}
+.accordion-inner ul {color:#000000;}
 
 #accordion2 {display: none;}
 #accordion2 .accordion-inner {text-align: center}
