--- a/css/custom.css
+++ b/css/custom.css
@@ -65,9 +65,9 @@ a.accordion-toggle-top:hover{
 	color: #000000;
 	
 }
-.accordion-group-top{background-color:  #000000;}
+.accordion-group-top{background-color:  #ffffff;}
 
-.accordion-inner ul {color:#000000;}
+.accordion-inner ul {color:#ffffff;}
 
 #accordion2 {display: none;}
 #accordion2 .accordion-inner {text-align: center}
